--- a/amplify.yml
+++ b/amplify.yml
@@ -1,6 +1,9 @@
 version: 1
 frontend:
   phases:
+    preBuild:
+      commands:
+        - nvm use 18
     build:
       commands:
         - yarn install
